5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4147/executions/1585_2895.log
== TEST (2019-03-25 09:19:59) 
-- CODE:
print(input("10")
print(input("25"))
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:21:09) 
-- CODE:
print(input("10")
print(input(25))
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print(input(25))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:21:22) 
-- CODE:
print(input("10")
print(25)
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print(25)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:21:31) 
-- CODE:
print(input("10")
print("25")
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print("25")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:22:00) 
-- CODE:
print(input("10")
print(var, 25)
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print(var, 25)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 09:22:12) 
-- CODE:
print(input("10")
print("var, 25")
print(input("15"))
print("265")
-- ERROR:
File "XXXX", line 2
    print("var, 25")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:54) 
-- CODE:
quant = int(input("Digite a quantidade de jogos: "))
valor = float(input("Digite o valor de cada jogo: "))
frete = float(input("Digite o valor do frete: "))
-- ERROR:
File "XXXX", line 2
    print("var, 25")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:18:18) 
-- CODE:
quant = int(input("Digite a quantidade de jogos: "))
valor = float(input("Digite o valor de cada jogo: "))
frete = float(input("Digite o valor do frete: "))
-- EXECUTION TIME:
0.141493
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:18:24) 
-- CODE:
quant = int(input("Digite a quantidade de jogos: "))
valor = float(input("Digite o valor de cada jogo: "))
frete = float(input("Digite o valor do frete: "))
-- ERROR:
File "XXXX", line 2
    print("var, 25")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:22:10) 
-- CODE:
quant = int(input("Digite a quantidade de jogos: "))
valor = float(input("Digite o valor de cada jogo: "))
frete = float(input("Digite o valor do frete: "))
total = quant * valor + frete
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:22:52) 
-- CODE:
quant = int(input("Digite a quantidade de jogos: "))
valor = float(input("Digite o valor de cada jogo: "))
frete = float(input("Digite o valor do frete: "))
total = quant * valor + frete
print(total)
-- EXECUTION TIME:
0.203193
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
